# freertos_lvgl

./: README.md  evkmimxrt1020_lvgl_guider_template LinkServer Debug.launch
armgcc/: CMakeLists.txt  evkmimxrt1020_lvgl_guider_template_Debug.ld  flags.cmake  ide_overrides.cmake
armgcc/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  evkmimxrt1020_lvgl_guider_template_Debug_library.ld  evkmimxrt1020_lvgl_guider_template_Debug_memory.ld
armgcc/debug/.cmake/api/v1/reply/: cache-v2-432dccf3fd7c23ccdc22.json  cmakeFiles-v1-dc4acc05b315fc5d8803.json  codemodel-v2-dbb1fe4a0f89d9d4a833.json  index-2024-03-09T01-23-11-0751.json  target-freertos_lvgl.elf-debug-bf9a09b11eaf7306fea2.json  toolchains-v1-3f24eea5d877e4aa97fe.json
board/: RTE_Device.h  board.h  lvgl_support.c  lvgl_support.h  pin_mux.c  pin_mux.h  sensor_support.c  sensor_support.h
bsp/bh1730fvc/: bh1730fvc.c  bh1730fvc.h
bsp/ec11/: ec11.c  ec11.h
bsp/heater/: heater.c  heater.h
bsp/lcd/: st7735s.c  st7735s.h
bsp/lis2mdl/: lis2mdl_reg.c  lis2mdl_reg.h
bsp/nsht30/: nsht30.c  nsht30.h
bsp/touchpanel/: xpt2046ts.c  xpt2046ts.h
lvgl/lvgl/src/: lv_conf_internal.h
lvglUI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_events1.txt  ui_helpers.c  ui_helpers.h
lvglUI/components/: ui_comp.c  ui_comp.h  ui_comp_data.c  ui_comp_data.h  ui_comp_hook.c  ui_comp_hook.h
lvglUI/fonts/: ui_font_GenJyuuGothic12.c  ui_font_font14.c
lvglUI/images/: ui_img_humidity_png.c  ui_img_light_png.c  ui_img_sensor2_png.c  ui_img_sensor_png.c  ui_img_setup_png.c  ui_img_temperature_png.c
lvglUI/screens/: ui_LightScreen.c  ui_MotionSensorScreen.c  ui_SetupScreen.c  ui_TempHumiScreen.c  ui_mainScreen.c
source/: FreeRTOSConfig.h  app.c  app.h  freertos_lvgl.code-workspace  lv_conf.h  lvgl_guider.c
startup/: startup_mimxrt1021.cpp
xip/: evkmimxrt1020_flexspi_nor_config.c
