# CROSS COMPILER SETTING
SET(CMAKE_SYSTEM_NAME Generic)
CMAKE_MINIMUM_REQUIRED (VERSION 3.10.0)

# THE VERSION NUMBER
SET (Tutorial_VERSION_MAJOR 1)
SET (Tutorial_VERSION_MINOR 0)

if (DEFINED ENV{SdkRootDirPath})
	SET(SdkRootDirPath "$ENV{SdkRootDirPath}")
endif()

if (NOT DEFINED SdkRootDirPath)
	MESSAGE(FATAL_ERROR "SDK path could not be determined. Please update SdkRootDirPath value from cmake-kits.json.")
endif()

# ENABLE ASM
ENABLE_LANGUAGE(ASM)

# RESET FLAG VALUES
SET(CMAKE_ASM_FLAGS_DEBUG "")
SET(CMAKE_ASM_FLAGS_RELEASE "")
SET(CMAKE_C_FLAGS_DEBUG "")
SET(CMAKE_C_FLAGS_RELEASE "")
SET(CMAKE_CXX_FLAGS_DEBUG "")
SET(CMAKE_CXX_FLAGS_RELEASE "")
SET(CMAKE_EXE_LINKER_FLAGS_DEBUG "")
SET(CMAKE_EXE_LINKER_FLAGS_RELEASE "")

SET(CMAKE_STATIC_LIBRARY_PREFIX)
SET(CMAKE_STATIC_LIBRARY_SUFFIX)

SET(CMAKE_EXECUTABLE_LIBRARY_PREFIX)
SET(CMAKE_EXECUTABLE_LIBRARY_SUFFIX)

# CURRENT DIRECTORY
SET(ProjDirPath ${CMAKE_CURRENT_SOURCE_DIR})
include(${ProjDirPath}/ide_overrides.cmake)

SET(EXECUTABLE_OUTPUT_PATH ${ProjDirPath}/${CMAKE_BUILD_TYPE})
SET(LIBRARY_OUTPUT_PATH ${ProjDirPath}/${CMAKE_BUILD_TYPE})

set(CMAKE_USER_MAKE_RULES_OVERRIDE "user_override.cmake")

project(freertos_lvgl)
set(MCUX_SDK_PROJECT_NAME freertos_lvgl.elf)

include(${ProjDirPath}/flags.cmake)

set(sources "${ProjDirPath}/../CMSIS/mpu_armv7.h"
"${ProjDirPath}/../CMSIS/core_cm7.h"
"${ProjDirPath}/../CMSIS/cmsis_version.h"
"${ProjDirPath}/../CMSIS/cmsis_gcc.h"
"${ProjDirPath}/../CMSIS/cmsis_compiler.h"
"${ProjDirPath}/../CMSIS/cachel1_armv7.h"
# "${ProjDirPath}/../custom/custom.h"
# "${ProjDirPath}/../custom/custom.c"
"${ProjDirPath}/../source/semihost_hardfault.c"
"${ProjDirPath}/../source/lv_conf.h"
"${ProjDirPath}/../source/lvgl_guider.c"
"${ProjDirPath}/../source/lvgl_freertos.h"
"${ProjDirPath}/../source/lvgl_freertos.c"
"${ProjDirPath}/../source/lvgl_demo_utils.h"
"${ProjDirPath}/../source/lvgl_demo_utils.c"
"${ProjDirPath}/../source/FreeRTOSConfig.h"
"${ProjDirPath}/../utilities/fsl_str.h"
"${ProjDirPath}/../utilities/fsl_str.c"
"${ProjDirPath}/../utilities/fsl_memcpy.S"
"${ProjDirPath}/../utilities/fsl_debug_console_conf.h"
"${ProjDirPath}/../utilities/fsl_debug_console.h"
"${ProjDirPath}/../utilities/fsl_debug_console.c"
"${ProjDirPath}/../utilities/fsl_assert.c"
"${ProjDirPath}/../freertos/freertos-kernel/timers.c"
"${ProjDirPath}/../freertos/freertos-kernel/tasks.c"
"${ProjDirPath}/../freertos/freertos-kernel/stream_buffer.c"
"${ProjDirPath}/../freertos/freertos-kernel/queue.c"
"${ProjDirPath}/../freertos/freertos-kernel/list.c"
"${ProjDirPath}/../freertos/freertos-kernel/event_groups.c"
"${ProjDirPath}/../freertos/freertos-kernel/croutine.c"
"${ProjDirPath}/../freertos/freertos-kernel/include/timers.h"
"${ProjDirPath}/../freertos/freertos-kernel/include/task.h"
"${ProjDirPath}/../freertos/freertos-kernel/include/stream_buffer.h"
"${ProjDirPath}/../freertos/freertos-kernel/include/stack_macros.h"
"${ProjDirPath}/../freertos/freertos-kernel/include/StackMacros.h"
"${ProjDirPath}/../freertos/freertos-kernel/include/semphr.h"
"${ProjDirPath}/../freertos/freertos-kernel/include/queue.h"
"${ProjDirPath}/../freertos/freertos-kernel/include/projdefs.h"
"${ProjDirPath}/../freertos/freertos-kernel/include/portable.h"
"${ProjDirPath}/../freertos/freertos-kernel/include/mpu_wrappers.h"
"${ProjDirPath}/../freertos/freertos-kernel/include/mpu_prototypes.h"
"${ProjDirPath}/../freertos/freertos-kernel/include/message_buffer.h"
"${ProjDirPath}/../freertos/freertos-kernel/include/list.h"
"${ProjDirPath}/../freertos/freertos-kernel/include/freertos_tasks_c_additions.h"
"${ProjDirPath}/../freertos/freertos-kernel/include/FreeRTOS.h"
"${ProjDirPath}/../freertos/freertos-kernel/include/event_groups.h"
"${ProjDirPath}/../freertos/freertos-kernel/include/deprecated_definitions.h"
"${ProjDirPath}/../freertos/freertos-kernel/include/croutine.h"
"${ProjDirPath}/../freertos/freertos-kernel/include/atomic.h"
"${ProjDirPath}/../freertos/freertos-kernel/portable/MemMang/heap_4.c"
"${ProjDirPath}/../freertos/freertos-kernel/portable/GCC/ARM_CM4F/portmacro.h"
"${ProjDirPath}/../freertos/freertos-kernel/portable/GCC/ARM_CM4F/port.c"
"${ProjDirPath}/../component/uart/fsl_adapter_uart.h"
"${ProjDirPath}/../component/uart/fsl_adapter_lpuart.c"
"${ProjDirPath}/../component/serial_manager/fsl_component_serial_port_uart.h"
"${ProjDirPath}/../component/serial_manager/fsl_component_serial_port_uart.c"
"${ProjDirPath}/../component/serial_manager/fsl_component_serial_port_internal.h"
"${ProjDirPath}/../component/serial_manager/fsl_component_serial_manager.h"
"${ProjDirPath}/../component/serial_manager/fsl_component_serial_manager.c"
"${ProjDirPath}/../component/lists/fsl_component_generic_list.h"
"${ProjDirPath}/../component/lists/fsl_component_generic_list.c"

# "${ProjDirPath}/../generated/gui_guider.h"
# "${ProjDirPath}/../generated/gui_guider.c"
# "${ProjDirPath}/../generated/events_init.h"
# "${ProjDirPath}/../generated/events_init.c"
# "${ProjDirPath}/../generated/widgets_init.c"
# "${ProjDirPath}/../generated/widgets_init.h"
# "${ProjDirPath}/../generated/setup_scr_LightIntensity.c"
# "${ProjDirPath}/../generated/setup_scr_main.c"
# "${ProjDirPath}/../generated/setup_scr_nineaxes.c"
# "${ProjDirPath}/../generated/setup_scr_setup.c"
# "${ProjDirPath}/../generated/setup_scr_TemperatureHumidity.c"


# "${ProjDirPath}/../generated/images/_guangzhao_alpha_25x25.c"
# "${ProjDirPath}/../generated/images/_humi_alpha_25x25.c"
# "${ProjDirPath}/../generated/images/_light_alpha_32x32.c"
# "${ProjDirPath}/../generated/images/_sensor_alpha_32x32.c"
# "${ProjDirPath}/../generated/images/_sensor2_alpha_32x32.c"
# "${ProjDirPath}/../generated/images/_setup_alpha_32x32.c"
# "${ProjDirPath}/../generated/images/_temperature_alpha_25x25.c"

# "${ProjDirPath}/../generated/guider_fonts/lv_font_font_12.c"
# "${ProjDirPath}/../generated/guider_fonts/lv_font_font_14.c"
# "${ProjDirPath}/../generated/guider_fonts/lv_font_font_16.c"
# "${ProjDirPath}/../generated/guider_fonts/lv_font_montserratMedium_12.c"
# "${ProjDirPath}/../generated/guider_fonts/lv_font_montserratMedium_16.c"
# "${ProjDirPath}/../generated/guider_customer_fonts/guider_customer_fonts.h"
"${ProjDirPath}/../lvglUI/ui.c"
"${ProjDirPath}/../lvglUI/ui_helpers.c"
"${ProjDirPath}/../lvglUI/ui_events.c"
"${ProjDirPath}/../lvglUI/screens/ui_LightScreen.c"
"${ProjDirPath}/../lvglUI/screens/ui_mainScreen.c"
"${ProjDirPath}/../lvglUI/screens/ui_MotionSensorScreen.c"
"${ProjDirPath}/../lvglUI/screens/ui_SetupScreen.c"
"${ProjDirPath}/../lvglUI/screens/ui_TempHumiScreen.c"
"${ProjDirPath}/../lvglUI/images/ui_img_humidity_png.c"
"${ProjDirPath}/../lvglUI/images/ui_img_light_png.c"
"${ProjDirPath}/../lvglUI/images/ui_img_sensor_png.c"
"${ProjDirPath}/../lvglUI/images/ui_img_sensor2_png.c"
"${ProjDirPath}/../lvglUI/images/ui_img_setup_png.c"
"${ProjDirPath}/../lvglUI/images/ui_img_temperature_png.c"
"${ProjDirPath}/../lvglUI/fonts/ui_font_font14.c"
"${ProjDirPath}/../lvglUI/fonts/ui_font_GenJyuuGothic12.c"
"${ProjDirPath}/../lvglUI/components/ui_comp.c"
"${ProjDirPath}/../lvglUI/components/ui_comp_data.c"
"${ProjDirPath}/../lvglUI/components/ui_comp_hook.c"


# "${ProjDirPath}/../lvglUI/components/ui_comp_button4.c"
# "${ProjDirPath}/../lvglUI/components/ui_comp.c"
# "${ProjDirPath}/../lvglUI/screens/ui_mainScreen.c"
# "${ProjDirPath}/../lvglUI/screens/ui_TempHumiScreen.c"
# "${ProjDirPath}/../lvglUI/ui.c"
# "${ProjDirPath}/../lvglUI/components/ui_comp_hook.c"
# "${ProjDirPath}/../lvglUI/ui_helpers.c"
# # "${ProjDirPath}/../lvglUI/ui_events.c"
# "${ProjDirPath}/../lvglUI/images/ui_img_sensor_png.c"
# "${ProjDirPath}/../lvglUI/images/ui_img_light_png.c"
# "${ProjDirPath}/../lvglUI/images/ui_img_sensor2_png.c"
# "${ProjDirPath}/../lvglUI/images/ui_img_setup_png.c"
# "${ProjDirPath}/../lvglUI/images/ui_img_setup1_png.c"
# "${ProjDirPath}/../lvglUI/images/ui_img_setup2_png.c"
# "${ProjDirPath}/../lvglUI/images/ui_img_temperature_png.c"
# "${ProjDirPath}/../lvglUI/images/ui_img_humi_png.c"
# "${ProjDirPath}/../lvglUI/images/ui_img_humi1_png.c"
# "${ProjDirPath}/../lvglUI/images/ui_img_shidu2_png.c"
# "${ProjDirPath}/../lvglUI/images/ui_img_shidu3_png.c"
# "${ProjDirPath}/../lvglUI/fonts/ui_font_font14.c"


"${ProjDirPath}/../startup/startup_mimxrt1021.cpp"
"${ProjDirPath}/../drivers/fsl_lpuart.h"
"${ProjDirPath}/../drivers/fsl_lpuart.c"
"${ProjDirPath}/../drivers/fsl_lpspi_edma.h"
"${ProjDirPath}/../drivers/fsl_lpspi_edma.c"
"${ProjDirPath}/../drivers/fsl_lpspi.h"
"${ProjDirPath}/../drivers/fsl_lpspi.c"
"${ProjDirPath}/../drivers/fsl_lpi2c_edma.h"
"${ProjDirPath}/../drivers/fsl_lpi2c_edma.c"
"${ProjDirPath}/../drivers/fsl_lpi2c_cmsis.h"
"${ProjDirPath}/../drivers/fsl_lpi2c_cmsis.c"
"${ProjDirPath}/../drivers/fsl_lpi2c.h"
"${ProjDirPath}/../drivers/fsl_lpi2c.c"
"${ProjDirPath}/../drivers/fsl_iomuxc.h"
"${ProjDirPath}/../drivers/fsl_gpio.h"
"${ProjDirPath}/../drivers/fsl_gpio.c"
"${ProjDirPath}/../drivers/fsl_edma.h"
"${ProjDirPath}/../drivers/fsl_edma.c"
"${ProjDirPath}/../drivers/fsl_dmamux.h"
"${ProjDirPath}/../drivers/fsl_dmamux.c"
"${ProjDirPath}/../drivers/fsl_common_arm.h"
"${ProjDirPath}/../drivers/fsl_common_arm.c"
"${ProjDirPath}/../drivers/fsl_common.h"
"${ProjDirPath}/../drivers/fsl_common.c"
"${ProjDirPath}/../drivers/fsl_clock.h"
"${ProjDirPath}/../drivers/fsl_clock.c"
"${ProjDirPath}/../drivers/fsl_cache.h"
"${ProjDirPath}/../drivers/fsl_cache.c"
"${ProjDirPath}/../drivers/fsl_enc.h"
"${ProjDirPath}/../drivers/fsl_enc.c"
"${ProjDirPath}/../drivers/fsl_xbara.h"
"${ProjDirPath}/../drivers/fsl_xbara.c"
"${ProjDirPath}/../drivers/fsl_pwm.h"
"${ProjDirPath}/../drivers/fsl_pwm.c"
"${ProjDirPath}/../drivers/fsl_gpt.h"
"${ProjDirPath}/../drivers/fsl_gpt.c"
"${ProjDirPath}/../lvgl/lvgl/lvgl.h"
"${ProjDirPath}/../lvgl/lvgl/src/lv_conf_kconfig.h"
"${ProjDirPath}/../lvgl/lvgl/src/lv_conf_internal.h"
"${ProjDirPath}/../lvgl/lvgl/src/lv_api_map.h"
"${ProjDirPath}/../lvgl/lvgl/src/lvgl.h"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_textarea.h"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_textarea.c"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_table.h"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_table.c"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_switch.h"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_switch.c"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_slider.h"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_slider.c"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_roller.h"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_roller.c"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_objx_templ.h"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_objx_templ.c"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_line.h"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_line.c"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_label.h"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_label.c"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_img.h"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_img.c"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_dropdown.h"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_dropdown.c"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_checkbox.h"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_checkbox.c"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_canvas.h"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_canvas.c"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_btnmatrix.h"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_btnmatrix.c"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_btn.h"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_btn.c"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_bar.h"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_bar.c"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_arc.h"
"${ProjDirPath}/../lvgl/lvgl/src/widgets/lv_arc.c"
"${ProjDirPath}/../lvgl/lvgl/src/hal/lv_hal_tick.h"
"${ProjDirPath}/../lvgl/lvgl/src/hal/lv_hal_tick.c"
"${ProjDirPath}/../lvgl/lvgl/src/hal/lv_hal_indev.h"
"${ProjDirPath}/../lvgl/lvgl/src/hal/lv_hal_indev.c"
"${ProjDirPath}/../lvgl/lvgl/src/hal/lv_hal_disp.h"
"${ProjDirPath}/../lvgl/lvgl/src/hal/lv_hal_disp.c"
"${ProjDirPath}/../lvgl/lvgl/src/hal/lv_hal.h"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_utils.h"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_utils.c"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_types.h"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_txt_ap.h"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_txt_ap.c"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_txt.h"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_txt.c"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_tlsf.h"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_tlsf.c"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_timer.h"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_timer.c"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_templ.h"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_templ.c"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_style_gen.h"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_style_gen.c"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_style.h"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_style.c"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_printf.h"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_printf.c"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_mem.h"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_mem.c"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_math.h"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_math.c"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_lru.h"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_lru.c"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_log.h"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_log.c"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_ll.h"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_ll.c"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_gc.h"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_gc.c"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_fs.h"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_fs.c"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_color.h"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_color.c"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_bidi.h"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_bidi.c"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_async.h"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_async.c"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_assert.h"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_area.h"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_area.c"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_anim_timeline.h"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_anim_timeline.c"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_anim.h"
"${ProjDirPath}/../lvgl/lvgl/src/misc/lv_anim.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_symbol_def.h"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_unscii_8.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_unscii_16.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_simsun_16_cjk.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_montserrat_8.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_montserrat_48.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_montserrat_46.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_montserrat_44.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_montserrat_42.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_montserrat_40.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_montserrat_38.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_montserrat_36.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_montserrat_34.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_montserrat_32.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_montserrat_30.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_montserrat_28_compressed.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_montserrat_28.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_montserrat_26.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_montserrat_24.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_montserrat_22.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_montserrat_20.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_montserrat_18.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_montserrat_16.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_montserrat_14.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_montserrat_12_subpx.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_montserrat_12.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_montserrat_10.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_loader.h"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_loader.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_fmt_txt.h"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_fmt_txt.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font_dejavu_16_persian_hebrew.c"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font.h"
"${ProjDirPath}/../lvgl/lvgl/src/font/lv_font.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/lv_extra.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/lv_extra.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/lv_img_decoder.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/lv_img_decoder.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/lv_img_cache.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/lv_img_cache.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/lv_img_buf.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/lv_img_buf.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/lv_draw_triangle.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/lv_draw_triangle.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/lv_draw_transform.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/lv_draw_transform.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/lv_draw_rect.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/lv_draw_rect.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/lv_draw_mask.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/lv_draw_mask.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/lv_draw_line.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/lv_draw_line.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/lv_draw_layer.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/lv_draw_layer.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/lv_draw_label.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/lv_draw_label.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/lv_draw_img.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/lv_draw_img.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/lv_draw_arc.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/lv_draw_arc.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/lv_draw.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/lv_draw.c"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_theme.h"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_theme.c"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_refr.h"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_refr.c"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_obj_tree.h"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_obj_tree.c"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_obj_style_gen.h"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_obj_style_gen.c"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_obj_style.h"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_obj_style.c"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_obj_scroll.h"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_obj_scroll.c"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_obj_pos.h"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_obj_pos.c"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_obj_draw.h"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_obj_draw.c"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_obj_class.h"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_obj_class.c"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_obj.h"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_obj.c"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_indev_scroll.h"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_indev_scroll.c"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_indev.h"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_indev.c"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_group.h"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_group.c"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_event.h"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_event.c"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_disp.h"
"${ProjDirPath}/../lvgl/lvgl/src/core/lv_disp.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/lv_widgets.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/themes/lv_themes.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/others/lv_others.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/lv_libs.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/layouts/lv_layouts.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sw/lv_draw_sw_transform.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sw/lv_draw_sw_rect.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sw/lv_draw_sw_polygon.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sw/lv_draw_sw_line.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sw/lv_draw_sw_letter.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sw/lv_draw_sw_layer.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sw/lv_draw_sw_img.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sw/lv_draw_sw_gradient.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sw/lv_draw_sw_gradient.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sw/lv_draw_sw_dither.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sw/lv_draw_sw_dither.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sw/lv_draw_sw_blend.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sw/lv_draw_sw_blend.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sw/lv_draw_sw_arc.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sw/lv_draw_sw.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sw/lv_draw_sw.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/swm341_dma2d/lv_gpu_swm341_dma2d.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sdl/lv_draw_sdl_utils.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sdl/lv_draw_sdl_utils.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sdl/lv_draw_sdl_texture_cache.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sdl/lv_draw_sdl_texture_cache.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sdl/lv_draw_sdl_stack_blur.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sdl/lv_draw_sdl_stack_blur.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sdl/lv_draw_sdl_rect.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sdl/lv_draw_sdl_rect.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sdl/lv_draw_sdl_priv.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sdl/lv_draw_sdl_polygon.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sdl/lv_draw_sdl_mask.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sdl/lv_draw_sdl_mask.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sdl/lv_draw_sdl_line.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sdl/lv_draw_sdl_layer.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sdl/lv_draw_sdl_layer.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sdl/lv_draw_sdl_label.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sdl/lv_draw_sdl_img.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sdl/lv_draw_sdl_img.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sdl/lv_draw_sdl_composite.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sdl/lv_draw_sdl_composite.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sdl/lv_draw_sdl_bg.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sdl/lv_draw_sdl_arc.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sdl/lv_draw_sdl.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/sdl/lv_draw_sdl.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/arm2d/lv_gpu_arm2d.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/stm32_dma2d/lv_gpu_stm32_dma2d.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/stm32_dma2d/lv_gpu_stm32_dma2d.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/win/lv_win.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/win/lv_win.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/tileview/lv_tileview.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/tileview/lv_tileview.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/tabview/lv_tabview.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/tabview/lv_tabview.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/spinner/lv_spinner.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/spinner/lv_spinner.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/spinbox/lv_spinbox.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/spinbox/lv_spinbox.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/span/lv_span.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/span/lv_span.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/msgbox/lv_msgbox.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/msgbox/lv_msgbox.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/meter/lv_meter.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/meter/lv_meter.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/menu/lv_menu.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/menu/lv_menu.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/list/lv_list.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/list/lv_list.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/led/lv_led.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/led/lv_led.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/keyboard/lv_keyboard.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/keyboard/lv_keyboard.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/imgbtn/lv_imgbtn.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/imgbtn/lv_imgbtn.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/colorwheel/lv_colorwheel.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/colorwheel/lv_colorwheel.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/chart/lv_chart.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/chart/lv_chart.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/calendar/lv_calendar_header_dropdown.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/calendar/lv_calendar_header_dropdown.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/calendar/lv_calendar_header_arrow.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/calendar/lv_calendar_header_arrow.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/calendar/lv_calendar.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/calendar/lv_calendar.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/themes/mono/lv_theme_mono.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/themes/mono/lv_theme_mono.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/others/snapshot/lv_snapshot.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/others/snapshot/lv_snapshot.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/others/msg/lv_msg.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/others/msg/lv_msg.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/others/monkey/lv_monkey.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/others/monkey/lv_monkey.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/others/imgfont/lv_imgfont.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/others/imgfont/lv_imgfont.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/others/ime/lv_ime_pinyin.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/others/ime/lv_ime_pinyin.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/others/gridnav/lv_gridnav.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/others/gridnav/lv_gridnav.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/others/fragment/lv_fragment_manager.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/others/fragment/lv_fragment.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/others/fragment/lv_fragment.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/sjpg/tjpgdcnf.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/sjpg/tjpgd.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/sjpg/tjpgd.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/sjpg/lv_sjpg.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/sjpg/lv_sjpg.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/rlottie/lv_rlottie.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/rlottie/lv_rlottie.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/qrcode/qrcodegen.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/qrcode/qrcodegen.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/qrcode/lv_qrcode.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/qrcode/lv_qrcode.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/png/lv_png.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/png/lv_png.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/png/lodepng.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/png/lodepng.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/gif/lv_gif.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/gif/lv_gif.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/gif/gifdec.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/gif/gifdec.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/fsdrv/lv_fs_win32.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/fsdrv/lv_fs_stdio.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/fsdrv/lv_fs_posix.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/fsdrv/lv_fs_fatfs.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/fsdrv/lv_fsdrv.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/freetype/lv_freetype.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/freetype/lv_freetype.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/ffmpeg/lv_ffmpeg.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/ffmpeg/lv_ffmpeg.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/bmp/lv_bmp.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/libs/bmp/lv_bmp.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/layouts/grid/lv_grid.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/layouts/grid/lv_grid.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/layouts/flex/lv_flex.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/layouts/flex/lv_flex.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/nxp/vglite/lv_vglite_utils.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/nxp/vglite/lv_vglite_utils.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/nxp/vglite/lv_vglite_buf.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/nxp/vglite/lv_vglite_buf.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/nxp/vglite/lv_draw_vglite_rect.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/nxp/vglite/lv_draw_vglite_rect.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/nxp/vglite/lv_draw_vglite_line.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/nxp/vglite/lv_draw_vglite_line.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/nxp/vglite/lv_draw_vglite_blend.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/nxp/vglite/lv_draw_vglite_blend.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/nxp/vglite/lv_draw_vglite_arc.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/nxp/vglite/lv_draw_vglite_arc.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/nxp/vglite/lv_draw_vglite.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/nxp/vglite/lv_draw_vglite.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/nxp/pxp/lv_gpu_nxp_pxp_osa.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/nxp/pxp/lv_gpu_nxp_pxp_osa.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/nxp/pxp/lv_gpu_nxp_pxp.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/nxp/pxp/lv_gpu_nxp_pxp.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/nxp/pxp/lv_draw_pxp_blend.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/nxp/pxp/lv_draw_pxp_blend.c"
"${ProjDirPath}/../lvgl/lvgl/src/draw/nxp/pxp/lv_draw_pxp.h"
"${ProjDirPath}/../lvgl/lvgl/src/draw/nxp/pxp/lv_draw_pxp.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/animimg/lv_animimg.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/widgets/animimg/lv_animimg.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/themes/default/lv_theme_default.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/themes/default/lv_theme_default.c"
"${ProjDirPath}/../lvgl/lvgl/src/extra/themes/basic/lv_theme_basic.h"
"${ProjDirPath}/../lvgl/lvgl/src/extra/themes/basic/lv_theme_basic.c"
"${ProjDirPath}/../device/system_MIMXRT1021.h"
"${ProjDirPath}/../device/system_MIMXRT1021.c"
"${ProjDirPath}/../device/MIMXRT1021_features.h"
"${ProjDirPath}/../device/MIMXRT1021.h"
"${ProjDirPath}/../device/fsl_device_registers.h"
"${ProjDirPath}/../CMSIS_driver/Include/Driver_SPI.h"
"${ProjDirPath}/../CMSIS_driver/Include/Driver_I2C.h"
"${ProjDirPath}/../CMSIS_driver/Include/Driver_Common.h"
"${ProjDirPath}/../xip/fsl_flexspi_nor_boot.h"
"${ProjDirPath}/../xip/fsl_flexspi_nor_boot.c"
"${ProjDirPath}/../xip/evkmimxrt1020_flexspi_nor_config.h"
"${ProjDirPath}/../xip/evkmimxrt1020_flexspi_nor_config.c"
"${ProjDirPath}/../board/RTE_Device.h"
"${ProjDirPath}/../board/pin_mux.h"
"${ProjDirPath}/../board/pin_mux.c"
"${ProjDirPath}/../board/lvgl_support.h"
"${ProjDirPath}/../board/lvgl_support.c"
"${ProjDirPath}/../board/sensor_support.h"
"${ProjDirPath}/../board/sensor_support.c"
"${ProjDirPath}/../board/dcd.h"
"${ProjDirPath}/../board/dcd.c"
"${ProjDirPath}/../board/clock_config.h"
"${ProjDirPath}/../board/clock_config.c"
"${ProjDirPath}/../board/board.h"
"${ProjDirPath}/../board/board.c"
"${ProjDirPath}/../bsp/lcd/st7735s.h"
"${ProjDirPath}/../bsp/lcd/st7735s.c"
"${ProjDirPath}/../bsp/touchpanel/xpt2046ts.h"
"${ProjDirPath}/../bsp/touchpanel/xpt2046ts.c"
"${ProjDirPath}/../bsp/lis2mdl/lis2mdl_reg.h"
"${ProjDirPath}/../bsp/lis2mdl/lis2mdl_reg.c"
"${ProjDirPath}/../bsp/lsm6ds3tr/lsm6ds3tr-c_reg.h"
"${ProjDirPath}/../bsp/lsm6ds3tr/lsm6ds3tr-c_reg.c"
"${ProjDirPath}/../bsp/nsht30/nsht30.h"
"${ProjDirPath}/../bsp/nsht30/nsht30.c"
"${ProjDirPath}/../bsp/bh1730fvc/bh1730fvc.h"
"${ProjDirPath}/../bsp/bh1730fvc/bh1730fvc.c"
"${ProjDirPath}/../bsp/ec11/ec11.h"
"${ProjDirPath}/../bsp/ec11/ec11.c"
"${ProjDirPath}/../bsp/heater/heater.h"
"${ProjDirPath}/../bsp/heater/heater.c"
"${ProjDirPath}/../source/app.h"
"${ProjDirPath}/../source/app.c"
)


add_executable(${MCUX_SDK_PROJECT_NAME} ${sources})



set(include_directories "${ProjDirPath}/../source"
"${ProjDirPath}/../drivers"
"${ProjDirPath}/../lvgl/lvgl"
"${ProjDirPath}/../lvgl/lvgl/src"
"${ProjDirPath}/../lvgl"
"${ProjDirPath}/../device"
"${ProjDirPath}/../utilities"
"${ProjDirPath}/../component/uart"
"${ProjDirPath}/../component/serial_manager"
"${ProjDirPath}/../component/lists"
"${ProjDirPath}/../xip"
"${ProjDirPath}/../CMSIS_driver/Include"
"${ProjDirPath}/../freertos/freertos-kernel/include"
"${ProjDirPath}/../freertos/freertos-kernel/portable/GCC/ARM_CM4F"
"${ProjDirPath}/../CMSIS"
"${ProjDirPath}/../board"
"${ProjDirPath}/../generated/guider_customer_fonts"
"${ProjDirPath}/../generated/guider_fonts"
"${ProjDirPath}/../evkmimxrt1020/lvgl_examples/lvgl_guider"
"${ProjDirPath}/../bsp/lcd"
"${ProjDirPath}/../bsp/touchpanel"
"${ProjDirPath}/../bsp/lis2mdl"
"${ProjDirPath}/../bsp/lsm6ds3tr"
"${ProjDirPath}/../bsp/nsht30"
"${ProjDirPath}/../bsp/bh1730fvc"
"${ProjDirPath}/../bsp/ec11"
"${ProjDirPath}/../bsp/heater"
"${ProjDirPath}/../lvglUI"
)


target_include_directories(${MCUX_SDK_PROJECT_NAME} PRIVATE ${include_directories})

set(link_directories "")


set(link_libraries "")


target_link_directories(${MCUX_SDK_PROJECT_NAME} PRIVATE ${link_directories})
target_link_libraries(${MCUX_SDK_PROJECT_NAME} PRIVATE -Wl,--start-group)
target_link_libraries(${MCUX_SDK_PROJECT_NAME} PRIVATE ${link_libraries})
target_link_libraries(${MCUX_SDK_PROJECT_NAME} PRIVATE -Wl,--end-group)





